crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_attr_name_unclosed_unicode_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  HTML_BLOCK@0..30
    HTML_BLOCK_TAG@0..30
      TEXT@0..29 "<div \u{301}bad=x id=hidde ..."
      NEWLINE@29..30 "\n"
