crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_attr_name_unclosed_unicode_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  PARAGRAPH@0..30
    TEXT@0..23 "<div \u{301}bad=x id=hidden>"
    STRONG@23..29
      STRONG_MARKER@23..25 "**"
      TEXT@25..27 "hi"
      STRONG_MARKER@27..29 "**"
    NEWLINE@29..30 "\n"
