crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_attr_name_unicode_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..48
  HTML_BLOCK_DIV@0..48
    HTML_BLOCK_TAG@0..31
      TEXT@0..4 "<div"
      WHITESPACE@4..5 " "
      HTML_ATTRS@5..30
        ATTR_KEY_VALUE@5..11
          ATTR_KEY@5..7 "é"
          TEXT@7..8 "="
          ATTR_VALUE@8..11 "\"v\""
        WHITESPACE@11..12 " "
        ATTR_KEY_VALUE@12..22
          ATTR_KEY@12..18 "名字"
          TEXT@18..19 "="
          ATTR_VALUE@19..22 "\"v\""
        WHITESPACE@22..23 " "
        ATTR_KEY_VALUE@23..30
          ATTR_KEY@23..26 "x²"
          TEXT@26..27 "="
          ATTR_VALUE@27..30 "\"v\""
      TEXT@30..31 ">"
    PLAIN@31..41
      STRONG@31..41
        STRONG_MARKER@31..33 "**"
        TEXT@33..39 "parsed"
        STRONG_MARKER@39..41 "**"
    HTML_BLOCK_TAG@41..48
      TEXT@41..47 "</div>"
      NEWLINE@47..48 "\n"
