crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_blockquote_depth_2_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..29
  BLOCK_QUOTE@0..29
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    BLOCK_QUOTE@2..29
      BLOCK_QUOTE_MARKER@2..3 ">"
      WHITESPACE@3..4 " "
      HTML_BLOCK_DIV@4..29
        HTML_BLOCK_TAG@4..10
          TEXT@4..8 "<div"
          TEXT@8..9 ">"
          NEWLINE@9..10 "\n"
        PARAGRAPH@10..18
          LINE_PREFIX@10..11 ">"
          LINE_PREFIX@11..12 " "
          LINE_PREFIX@12..13 ">"
          LINE_PREFIX@13..14 " "
          TEXT@14..17 "foo"
          NEWLINE@17..18 "\n"
        HTML_BLOCK_TAG@18..29
          LINE_PREFIX@18..19 ">"
          LINE_PREFIX@19..20 " "
          LINE_PREFIX@20..21 ">"
          LINE_PREFIX@21..22 " "
          TEXT@22..28 "</div>"
          NEWLINE@28..29 "\n"
