crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_blockquote_messy_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  BLOCK_QUOTE@0..30
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..30
      HTML_BLOCK_TAG@2..18
        TEXT@2..17 "<div id=\"x\">foo"
        NEWLINE@17..18 "\n"
      HTML_BLOCK_CONTENT@18..30
        LINE_PREFIX@18..19 ">"
        LINE_PREFIX@19..20 " "
        TEXT@20..29 "bar</div>"
        NEWLINE@29..30 "\n"
