crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_blockquote_multiline_open_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..35
  BLOCK_QUOTE@0..35
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..35
      HTML_BLOCK_TAG@2..7
        TEXT@2..6 "<div"
        NEWLINE@6..7 "\n"
      HTML_BLOCK_CONTENT@7..35
        LINE_PREFIX@7..8 ">"
        LINE_PREFIX@8..9 " "
        TEXT@9..18 "  id=\"x\">"
        NEWLINE@18..19 "\n"
        LINE_PREFIX@19..20 ">"
        LINE_PREFIX@20..21 " "
        TEXT@21..25 "body"
        NEWLINE@25..26 "\n"
        LINE_PREFIX@26..27 ">"
        LINE_PREFIX@27..28 " "
        TEXT@28..34 "</div>"
        NEWLINE@34..35 "\n"
